--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@
 *.user
 *.userosscache
 *.sln.docstates
-appsettings.json
+appsettings.Development.json
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
