--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "Twilio": {
-    "AccountSid": "xxxxx",
-    "AuthToken": "xxxxx"
+    "AccountSid": "AC0d6a4cd0e8f3552d4c788b2d43a23ec9",
+    "AuthToken": "a657cd7ea539df2d10981b03680ceabc"
   }
 }
