--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "Twilio": {
-    "AccountSid": "xxxxx",
-    "AuthToken": "xxxxx"
+    "AccountSid": "xxxxxx",
+    "AuthToken": "xxxxxx"
   }
 }
