--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "Twilio": {
-    "AccountSid": "xxxxxx",
-    "AuthToken": "xxxxxx"
+    "AccountSid": "xxxx",
+    "AuthToken": "xxxx"
   }
 }
